# Terminal-Software-Renderer

./: CMakeLists.txt  README.md
src/: main.cpp
tools/unix/: run.sh
tools/windows/: configure.bat
